[package]
name = "claynosaurz-staking"
version = "1.0.1"
description = "Claynosaurz Staking System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "claynosaurz_staking"

[features]
default = ["mainnet"]
mainnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
mpl-token-metadata = "5.1.0"
solana-security-txt = "1.1.1"